planB/.omx/static-audit-20260713/cpu-feature-decoder-1398cc-red.log
native-reimplementation/recovered_primitives.cpp:22526:10: error: use of undeclared identifier 'recoveredCpuFeatureDecoder1398ccRegression'; did you mean 'recoveredCpuFeatureConstructor139d04Regression'?
 22526 |     if (!recoveredCpuFeatureDecoder1398ccRegression()) {
       |          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
       |          recoveredCpuFeatureConstructor139d04Regression
native-reimplementation/recovered_primitives.cpp:3584:6: note: 'recoveredCpuFeatureConstructor139d04Regression' declared here
 3584 | bool recoveredCpuFeatureConstructor139d04Regression() {
      |      ^
1 error generated.
